--- a/components/sass/_base.scss
+++ b/components/sass/_base.scss
@@ -1,7 +1,6 @@
 // _base.scss
 // ==============
 body {
-  background: lighten($beige, 10%);
   font-family: $bodyFont;
   font-size: 1.1em;
 }
@@ -21,7 +20,7 @@ body {
 h1 {
   font-size: 3.5em;
   margin-bottom: 10px;
-  color: $green;
+  color: $flatBlk;
  
   @media (max-width: 700px) {
     font-size: 2.2em;
@@ -30,13 +29,13 @@ h1 {
  
 h2 {
   font-size: 1.5em;
-  color: $purple;
+  color: $orange;
 }
  
 p {
   font-size: 1.3em;
   line-height: 1.5em;
-    color: $purple;
+    color: $gray300;
   margin-bottom: 20px;
     margin-top: 15px;
 }
