--- a/components/sass/_variables.scss
+++ b/components/sass/_variables.scss
@@ -2,16 +2,15 @@
 // =================
 @import "http://fonts.googleapis.com/css?family=Patua+One|Inika";
  
-$beige         : #E3C691;
-$darkGreenGold : #8D8862;
-$lightGreen    : #C0DC99;
-$green         : #507356;
-$lightBlue     : #97D5D9;
-$desatBlue     : #464B65;
-$purple        : #3E2B3D;
-$darkPurple    : #3A3248;
-$pink          : #CC8E94;
-$skin          : #B08B7B;
+$blue          : #323257;
+$darkBlue 	   : #262741;
+$gold    	   : #A49F79;
+$orange        : #F04B47;
+$gray300       : #989898;
+$gray450       : #4C4C4C;
+$flatBlk       : #2E2D2C;
+$pureWhite     : #FFFFFF;
+$cloud		   : #ECF0F1;
  
 $headFont : 'Patua One', sans-serif;
 $bodyFont : 'Inika', serif;
