--- a/components/sass/_variables.scss
+++ b/components/sass/_variables.scss
@@ -1,6 +1,6 @@
 // _variables.scss
 // =================
-@import "http://fonts.googleapis.com/css?family=Patua+One|Inika";
+@import "http://fonts.googleapis.com/css?family=PT+Sans|Droid+Serif' rel='stylesheet' type='text/css";
  
 $blue          : #323257;
 $darkBlue 	   : #262741;
@@ -12,5 +12,5 @@ $flatBlk       : #2E2D2C;
 $pureWhite     : #FFFFFF;
 $cloud		   : #ECF0F1;
  
-$headFont : 'Patua One', sans-serif;
-$bodyFont : 'Inika', serif;
+$headFont : 'Droid Serif', serif;
+$bodyFont : 'PT Sans', sans-serif;
